# questionbank-crawler

./: .gitignore  MCP_TOOLS_GUIDE.md  app.py  config.py  pyproject.toml  requirements.txt  run.bat  setup.bat
crawler/: __init__.py  bank_crawler.py  base_crawler.py  bcs_crawler.py  manager.py  ministry_crawler.py  teacher_crawler.py  url_crawler.py  wp_api_crawler.py
processors/: __init__.py  ai_extractor.py  pdf_handler.py
storage/: __init__.py  mongo_store.py  store.py
tools/: check_url.py  debug_api.py  dump_html_section.py  explore_sources2.py  extract_exambd_html.py  find_sources.py  full_crawl.py  inspect_exambd.py  inspect_exambd2.py  query_wp_api.py  test_crawl.py  test_crawl2.py  test_pipeline.py  test_ui.py
utils/: __init__.py  logger.py
